--- a/03-react-auth/src/components/Header/header.scss
+++ b/03-react-auth/src/components/Header/header.scss
@@ -1,3 +1,11 @@
+$menu-color: #3d3d3d;
+
+@mixin header-link {
+    color: $menu-color;
+    text-decoration: none;
+    letter-spacing: 2px;
+}
+
 .header {
     background-color: #cecece;
     display: flex;
@@ -6,9 +14,7 @@
     padding: 15px 30px;
 
     &__logo {
-        color: #3d3d3d;
-        text-decoration: none;
-        letter-spacing: 2px;
+        @include header-link;
     }
 
     &__nav-list {
@@ -18,12 +24,16 @@
     }
 
     &__item-link {
-        color: #3d3d3d;
-        text-decoration: none;
-        letter-spacing: 2px;
+        @include header-link;
+
+        &--is-active {
+            border-bottom: 2px solid $menu-color;
+        }
 
         &:hover {
-            border-bottom: 2px solid #3d3d3d;
+            border-bottom: 2px solid $menu-color;
         }
+
+
     }
 }
